fix: add column ano in dataset 2024

--- a/notebooks/01_limpeza_de_dados_2024.ipynb
+++ b/notebooks/01_limpeza_de_dados_2024.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "1f2a2611",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        "56"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28532/1583550381.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_47064/1583550381.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "id": "1021f949",
    "metadata": {},
    "outputs": [
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "id": "4a938511",
    "metadata": {},
    "outputs": [],
@@ -2279,13 +2279,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "id": "4e5687ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_2024_final.to_csv(output_path, index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ac4554",
+   "metadata": {},
+   "source": [
+    "### 9 - Adicionando coluna de ano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ddf404bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2024_limpo = pd.read_csv(PROCESSED_DATA_DIR / 'state_of_data_2024_limpo.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9a780225",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_47064/2928955353.py:1: UserWarning: Parsing dates in %d/%m/%Y %H:%M:%S format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  df_2024_final['data_envio'] = pd.to_datetime(df_2024_final['data_envio'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_2024_final['data_envio'] = pd.to_datetime(df_2024_final['data_envio'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "eca690d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2024_final['ano'] = df_2024_final['data_envio'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c8b5e680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2024_final.to_csv(PROCESSED_DATA_DIR / 'state_of_data_2024_limpo.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "02c01c47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ano</th>\n",
+       "      <th>salario_medio_mensal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>1500.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>1500.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>1500.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>1500.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5212</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>22500.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5213</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>14000.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5214</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5215</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>40001.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5216</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5217 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ano  salario_medio_mensal\n",
+       "0     2024                1500.5\n",
+       "1     2024                1000.0\n",
+       "2     2024                1500.5\n",
+       "3     2024                1500.5\n",
+       "4     2024                1500.5\n",
+       "...    ...                   ...\n",
+       "5212  2024               22500.5\n",
+       "5213  2024               14000.5\n",
+       "5214  2024                   NaN\n",
+       "5215  2024               40001.0\n",
+       "5216  2024                   NaN\n",
+       "\n",
+       "[5217 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2024_final[['ano', 'salario_medio_mensal']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e005188",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
