feat: cleaned dataset 2023

--- a/notebooks/02_limpeza_de_dados_2023.ipynb
+++ b/notebooks/02_limpeza_de_dados_2023.ipynb
@@ -1323,12 +1323,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93ba9b4e",
+   "metadata": {},
+   "source": [
+    "## 6 - Adicionando coluna ano"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "830f93b8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "criando coluna \"ano\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('criando coluna \"ano\"')\n",
+    "df_2023_renomeado['ano'] = 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e246a4ca",
+   "metadata": {},
+   "source": [
+    "## 7 - salvando arquivo novo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "54766c8b",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output_filename = 'state_of_data_2023_limpo.csv'\n",
+    "outuput_path = PROCESSED_DATA_DIR / output_filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "34c83e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2023_renomeado.to_csv(outuput_path, index=False)"
+   ]
   }
  ],
  "metadata": {
