docs: change directorys

--- a/notebook/00_teste_colunas_em_comum.ipynb
+++ b/notebook/00_teste_colunas_em_comum.ipynb
@@ -76,6 +76,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "id": "4be85539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ds_tecnica_deteccao_churn', 'da_etl_nenhuma', 'da_autonomia_ferramentas_crm_analytics', 'da_ferramentas_autonomia_negocios_lista', 'empresa_tem_analista_dados', 'cloud_usa_gcp', 'gestor_desafio_ml_em_producao', 'ds_tecnica_estatistica_classica', 'nivel_hierarquico', 'gestor_desafio_obter_investimento', 'ds_rotina_manutencao_ml', 'ds_tecnologia_plataformas_ml', 'tipo_oportunidade_buscada', 'experiencia_dados_anos', 'banco_dados_usa_elasticsearch', 'linguagem_usa_scala', 'bi_usa_salesforce_einstein', 'criterio_escolha_qualidade_gestores', 'de_maior_tempo_manutencao_datalakes', 'criterio_escolha_flexibilidade', 'banco_dados_usa_bigquery', 'banco_dados_usa_dynamodb', 'banco_dados_usa_oracle', 'de_rotina_nenhuma_das_opcoes', 'cargo_gestor', 'da_maior_tempo_modelagem_dados', 'atitude_retorno_presencial', 'linguagem_usa_java', 'ds_maior_tempo_dashboards_bi', 'de_rotina_manutencao_datalakes', 'bi_usa_oracle_bi', 'satisfacao_trabalho', 'cloud_usa_aws', 'bi_usa_sas_va', 'atuacao_funcao', 'da_rotina_dashboards_bi', 'ds_tecnologia_estatistica_avancada', 'da_etl_sas_di', 'ds_tecnologia_ferramentas_bi', 'da_maior_tempo_manutencao_planilhas', 'tempo_busca_emprego_meses', 'ds_tecnica_classificacao_arvores_redes', 'entrevistas_ultimos_6m', 'ds_tecnica_clusterizacao', 'de_etl_nenhuma', 'da_autonomia_ferramentas_product_insights', 'de_etl_ibm_datastage', 'banco_dados_usa_postgresql', 'ds_maior_tempo_feature_store_mlops', 'ds_maior_tempo_coleta_limpeza', 'banco_dados_usa_hive', 'banco_dados_usa_firebird', 'da_etl_ibm_datastage', 'bi_usa_excel_gsheets', 'ds_tecnica_visao_computacional', 'gestor_desafio_manutencao_producao', 'area_formacao', 'ds_rotina_infraestrutura', 'da_rotina_manutencao_planilhas', 'banco_dados_usa_sql_server', 'linguagem_usa_javascript', 'de_empresa_possui_data_warehouse', 'de_etl_luigi', 'ds_tecnica_markov_hmm', 'fonte_dados_usa_videos', 'linguagem_usa_matlab', 'da_rotina_estatistica_avancada', 'de_maior_tempo_consultas_sql', 'criterio_escolha_beneficios', 'banco_dados_usa_firestore', 'de_rotina_modelagem_dados', 'de_etl_scripts_python', 'banco_dados_usa_sqlite', 'ds_rotina_contato_negocios', 'de_empresa_tecnologia_data_lake', 'ano', 'ds_tecnica_regressao', 'criterio_escolha_maturidade_empresa', 'ds_rotina_dashboards_bi', 'linguagem_usa_vba', 'ds_tecnologia_automl', 'banco_dados_usa_databricks', 'gestor_resp_head_engenharia', 'gestor_resp_contratacao', 'da_etl_oracle_di', 'gestor_resp_treinamentos', 'da_etl_scripts_python', 'da_rotina_analise_codigo', 'da_maior_tempo_estatistica_testes', 'linguagem_usa_dotnet', 'de_maior_tempo_etl_ferramentas', 'da_etl_knime', 'atua_como_gestor', 'bancos_dados_usados_dia_a_dia', 'empresa_cargos_dados_lista', 'da_etl_google_dataflow', 'da_autonomia_ferramentas_nao_sabe', 'salario_medio_mensal', 'experiencia_anos_num', 'gestor_desafio_contratar_talentos', 'bi_usa_qlik', 'da_autonomia_ferramentas_nenhuma', 'bi_usa_redash', 'bi_usa_sap_bi', 'de_rotina_consultas_sql', 'bi_usa_tableau', 'gestor_desafio_volume_dados', 'ds_tecnica_estatistica_bayesiana', 'de_etl_airflow', 'da_rotina_manutencao_etl', 'criterio_escolha_aprendizado', 'banco_dados_usa_mariadb', 'da_etl_fivetran', 'banco_dados_usa_hbase', 'gestor_responsabilidades_lista', 'da_maior_tempo_manutencao_etl', 'gestor_resp_decisao_ferramentas', 'banco_dados_usa_db2', 'setor_atuacao', 'da_etl_ssis', 'de_maior_tempo_integracao_plataformas', 'da_etl_stitch', 'banco_dados_usa_firebase', 'ds_tecnica_sistemas_recomendacao', 'fonte_dados_usa_geo', 'desafios_gestor', 'empresa_tem_business_analyst', 'ds_maior_tempo_ml_em_producao', 'banco_dados_usa_vertica', 'banco_dados_usa_mongodb', 'de_etl_oracle_di', 'da_autonomia_ferramentas_point_and_click', 'banco_dados_usa_redis', 'ferramentas_bi_usadas_dia_a_dia', 'banco_dados_usa_presto', 'empresa_tem_dpm', 'de_rotina_integracao_plataformas', 'fonte_dados_usa_nosql', 'de_empresa_tecnologia_data_warehouse', 'de_etl_fivetran', 'fonte_dados_usa_audios', 'criterio_escolha_ambiente', 'banco_dados_usa_s3', 'ds_tecnica_reinforcement_learning', 'da_etl_luigi', 'estado_residencia', 'carreira_experiencia_processos_seletivos', 'bi_usa_grafana', 'ds_maior_tempo_gasto', 'gestor_resp_visao_longo_prazo', 'gestor_resp_gestao_projetos', 'gestor_desafio_garantir_roi', 'de_maior_tempo_qualidade_dados', 'banco_dados_usa_splunk', 'da_maior_tempo_dashboards_bi', 'linguagem_principal', 'gestor_desafio_projetos_multiarea', 'fonte_dados_principal', 'ds_tecnologia_data_apps', 'id_participante', 'empresa_tem_dba', 'de_maior_tempo_gasto', 'de_etl_knime', 'tamanho_empresa', 'nivel_ensino', 'da_autonomia_ferramentas_automl', 'ds_tecnologia_planilhas', 'criterio_escolha_proposito', 'ds_maior_tempo_manutencao_ml', 'da_maior_tempo_gasto', 'uf_residencia', 'banco_dados_usa_datomic', 'gestor_resp_head_analise_bi', 'criterio_escolha_remuneracao', 'da_etl_qlik_sense', 'ds_rotina_ml_em_producao', 'linguagem_usa_r', 'empresa_tem_arquiteto_dados', 'ds_rotina_estudos_ad_hoc', 'banco_dados_usa_redshift', 'de_ferramentas_qualidade_dados_lista', 'banco_dados_usa_coachdb', 'da_maior_tempo_extracao_api', 'idade', 'de_rotina_etl_ferramentas', 'regiao_residencia', 'banco_dados_usa_snowflake', 'da_rotina_extracao_api', 'bi_usa_pentaho', 'gestor_resp_gestao_pessoas', 'gestor_resp_atua_tecnico', 'cloud_usa_azure', 'da_etl_aws_glue', 'de_etl_google_dataflow', 'linguagem_usa_sql', 'banco_dados_usa_aurora_rds', 'da_rotina_modelagem_dados', 'da_maior_tempo_estatistica_avancada', 'criterios_escolha_emprego', 'bi_usa_quicksight', 'banco_dados_usa_mysql', 'cargo_atual', 'de_maior_tempo_modelagem_dados', 'grupo_cargo', 'ds_rotina_coleta_limpeza', 'gestor_desafio_gerar_valor_negocio', 'linguagem_usa_python', 'de_etl_stitch', 'de_rotina_modelagem_arquitetura', 'ds_tecnologia_etl', 'ds_tecnologia_dev_nuvem', 'bi_usa_alteryx', 'da_etl_sql_procedures', 'situacao_trabalho', 'ds_rotina_desenvolvimento_ml', 'de_etl_sql_procedures', 'de_rotina_qualidade_dados', 'ds_maior_tempo_infraestrutura', 'bi_usa_powerbi', 'ds_tecnica_deteccao_fraude', 'fonte_dados_usa_relacionais', 'banco_dados_usa_athena', 'empresa_tem_engenheiro_dados', 'de_maior_tempo_modelagem_arquitetura', 'de_etl_talend', 'criterio_escolha_plano_carreira', 'atuacao_em_dados', 'banco_dados_usa_sybase', 'bi_usa_nenhuma', 'da_etl_talend', 'faixa_idade', 'da_etl_airflow', 'de_maior_tempo_pipelines_codigo', 'banco_dados_usa_access', 'banco_dados_usa_neo4j', 'experiencia_ti_anos', 'da_rotina_estatistica_testes', 'fonte_dados_usa_textos', 'linguagens_usadas_dia_a_dia', 'gestor_desafio_dividir_tempo_tecnico_gestao', 'de_etl_qlik_sense', 'planos_mudar_emprego', 'ds_maior_tempo_manutencao_etl', 'gestor_desafio_qualidade_confiabilidade', 'gestor_desafio_gerenciar_expectativas', 'ds_rotina_estatistica_avancada', 'de_etl_ssis', 'bi_usa_superset', 'gestor_resp_head_ia_ml', 'empresa_tem_analista_bi', 'genero', 'de_etl_aws_glue', 'ds_tecnologia_feature_store', 'ds_tecnologia_dev_local', 'de_etl_sap_bw', 'da_etl_sap_bw', 'linguagem_usa_c_cplusplus_csharp', 'empresa_tem_analytics_engineer', 'ds_maior_tempo_contato_negocios', 'linguagem_usa_php', 'de_rotina_pipeline_codigo', 'criterio_escolha_reputacao_empresa', 'banco_dados_usa_cassandra', 'modelo_trabalho_ideal', 'ds_maior_tempo_desenvolvimento_ml', 'motivos_insatisfacao', 'de_empresa_possui_data_lake', 'gestor_desafio_inovar', 'bi_usa_metabase', 'tamanho_equipe_dados', 'fonte_dados_usa_imagens', 'bi_usa_looker', 'fontes_dados_lista', 'da_maior_tempo_analise_codigo', 'linguagem_usa_sas_stata', 'fonte_dados_usa_planilhas', 'ds_tecnica_series_temporais', 'gestor_resp_gestao_produtos', 'de_etl_sas_di', 'linguagem_usa_nenhuma', 'gestor_desafio_gestao_remota', 'ds_tecnica_nlp', 'linguagem_usa_julia', 'empresa_tem_cientista_dados', 'banco_dados_usa_sap_hana', 'ds_tecnologia_controle_versao', 'modelo_trabalho_atual', 'regiao_origem', 'gestor_desafio_reter_talentos', 'faixa_salarial'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(colunas_comum)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "81522523",
    "metadata": {},
@@ -110,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "49256408",
    "metadata": {},
    "outputs": [
@@ -121,7 +139,7 @@
       "Total de colunas em 2024: 423\n",
       "Total de colunas em 2023: 403\n",
       "Total de colunas em 2022: 357\n",
-      "Total de colunas em 2022: 360\n",
+      "Total de colunas em 2021: 360\n",
       "--------------------------------------------------\n",
       "Colunas em comum: 290\n",
       "Colunas exclusivas de 2024: 59\n",
@@ -136,7 +154,7 @@
     "print(f\"Total de colunas em 2024: {len(colunas_2024)}\")\n",
     "print(f\"Total de colunas em 2023: {len(colunas_2023)}\")\n",
     "print(f\"Total de colunas em 2022: {len(colunas_2022)}\")\n",
-    "print(f\"Total de colunas em 2022: {len(colunas_2021)}\")\n",
+    "print(f\"Total de colunas em 2021: {len(colunas_2021)}\")\n",
     "\n",
     "print(\"-\" * 50)\n",
     "print(f\"Colunas em comum: {len(colunas_comum)}\")\n",
@@ -660,6 +678,39 @@
    ],
    "source": [
     "df_unificado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3fd0c51e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "experiencia_anos_num\n",
+       "0.0      702\n",
+       "0.5     1802\n",
+       "1.5     3571\n",
+       "2.5      487\n",
+       "3.5     3206\n",
+       "4.5      389\n",
+       "5.0      985\n",
+       "5.5     1186\n",
+       "8.0      276\n",
+       "8.5     1265\n",
+       "12.0    1806\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unificado['experiencia_anos_num'].value_counts().sort_index()"
    ]
   },
   {
